--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body{
     color: blue;
     background-color: red;
     margin-left: 80%;
+    display: flex;
+    justify-content: space-between;
 
 }
 .fourth:hover{
@@ -57,5 +59,59 @@ body{
 #last{
     color: blueviolet;
     text-align: center;
+    background-color:black;
+    height: 200px;
+}
+img:hover{
+    transform: scale(1.1,1.1);
+
+
+}
+#copy{
+    color: aliceblue;
+    margin-top: 120px;
+    text-align: bottom;
+}
+.last4{
+    color:antiquewhite;
+}
+#link{
+   
+    
+    margin:10px  ;
+    
 }
 
+#toprecipe{
+    display: flex;
+   
+    justify-content: space-evenly;
+}
+#bottomrecipe{
+    display: flex;
+    justify-content: space-evenly;
+}
+.top-image1{
+    border: 7px;
+    border-color: pink;
+    border-style: solid;
+    border-radius: 20%;
+}
+.top-image2{
+    border: 7px;
+    border-color: pink;
+    border-style: solid;
+    border-radius: 20%;
+}
+.top-image3{
+    border: 7px;
+    border-color: pink;
+    border-style: solid;
+    border-radius: 20%;
+}
+.top-image4{
+    border: 7px;
+    border-color: pink;
+    border-style: solid;
+    border-radius: 20%;
+}
