--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     background-color: black;
     position: sticky;
     top: 0;
-    width: 1500px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,6 +17,7 @@ body{
 .second{
     color: brown;
     font-size: 20px;
+    width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .third{
@@ -24,6 +25,7 @@ body{
     background-color: red;
     margin-left: 80%;
     display: flex;
+    width: 100%;
     justify-content: space-between;
 
 }
@@ -34,7 +36,7 @@ body{
 .fourth{
     font-family: "Butterfly Kids", cursive;
     border: 10px;
-    width: 1500px;
+    width: 100%;
     border-radius: 20px;
     border-style: dashed;
     height: 100px;
@@ -48,11 +50,12 @@ body{
 .fifth{
     margin-top: 20px;
     height: 700px;
+    width: 100%;
     background-color: blue;
 }
 .six{
     margin-top: 30px;
-    
+    width: 100%;
   
 }
 
@@ -61,6 +64,7 @@ body{
     text-align: center;
     background-color:black;
     height: 200px;
+    width: 100%;
 }
 img:hover{
     transform: scale(1.1,1.1);
